プロフィール画像クリックから画像アップロード

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,3 +1,6 @@
 .container
-  .profile_photo
-    = image_tag current_user.avatar_image, class: 'avatar'
+  = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
+    = f.label :image do
+      .profile_photo
+        = image_tag current_user.avatar_image, class: 'avatar'
+        = f.file_field :image, class: 'uploader', style: 'display:none'
