投稿機能作成（複数画像）

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -3,11 +3,15 @@
     .card
       .card_header
         .card_avatar
-          = image_tag article.image, class: 'avatar'
+          = image_tag article.user.avatar_image, class: 'avatar'
         .card_account_name
           = article.user.account
       .card_image
-        = image_tag 'default.png'
+        - if article.images.attached?
+          - article.images.each do |image|
+            = image_tag image
+        - else
+          = image_tag 'default.png'
       .card_sub
         .card_likes
           = image_tag 'Vectorlike.png'
