--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -24,4 +24,7 @@
       .card_comment
         Jmax_21  Summer holiday :3
       .card_time
-        3 hours ago
+        %time(datetime="#{article.created_at}")= time_ago_in_words(article.created_at)
+      .share
+        - if article.user == current_user
+          <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
