API作成、記事のいいね状態を取得

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,4 +1,4 @@
-.container
+.container#article-index{data: {article_id: @articles.ids}}
   - @articles.each do |article|
     .card
       .card_header
