--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -13,15 +13,12 @@
         - else
           = image_tag 'default.png'
       .card_sub
-        - if current_user.has_liked?(article)
-          .card_likes
-            = link_to article_likes_path(article), data: {method: 'delete'} do
-              = image_tag 'Vectorlike.png'
-        - else
-          .card_likes
-            = link_to article_likes_path(article), data: {method: 'post'} do
-              = image_tag 'Vector.png'
-
+        .card_likes.hidden.active-heart
+          = link_to article_likes_path(article), data: {method: 'delete'} do
+            = image_tag 'Vectorlike.png'
+        .card_likes.hidden.inactive-heart
+          = link_to article_likes_path(article), data: {method: 'post'} do
+            = image_tag 'Vector.png'
         .card_comment_img
           = image_tag 'Vectorcomment.png'
       .card_like_persons
