--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -18,7 +18,8 @@
         .card_likes.hidden.inactive-heart{id: "#{article.id}"}
           = image_tag 'Vector.png'
         .card_comment_img
-          = image_tag 'Vectorcomment.png'
+          = link_to new_article_comment_path(article) do
+            = image_tag 'Vectorcomment.png'
       .card_like_persons
         Jasmine and 12,000 other liked your post
       .card_content
