--- a/app/views/comments/new.html.haml
+++ b/app/views/comments/new.html.haml
@@ -1,3 +1,8 @@
+-# - content_for :header do
+-#   .header_left
+-#     = image_tag 'icon_back'
+-#   .header_right
+-#     = Comment
 .container
   %ul
   - @comment.errors.full_messages.each do |message|
