--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -1,10 +1,4 @@
-.container
-  -# - @comments.each do |comment|
-  -#   .comment
-  -#     .comment_user
-  -#       = image_tag comment.user.avatar_image
-  -#     .comment_user_name
-  -#       = comment.user.account
-  -#   .comment_content
-  -#     %p= comment.content
+.container#comment-index{data: {article_id: @article.id}}
   .comments-container
+
+= javascript_pack_tag 'comment'
