--- a/app/views/comments/new.html.haml
+++ b/app/views/comments/new.html.haml
@@ -1,9 +1,5 @@
--# - content_for :header do
--#   .header_left
--#     = image_tag 'icon_back'
--#   .header_right
--#     = Comment
 .container
+  .comments-container
   %ul
   - @comment.errors.full_messages.each do |message|
     %li= message
