--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -1,4 +1,10 @@
 .container#comment-index{data: {article_id: @article.id}}
   .comments-container
+  .btn-secondary.comment-form
+    %p コメントを追加
+  .comment-text-area.hidden
+    = text_area_tag :comment_content, '', class: 'sm'
+    .btn-secondary.add-comment-btn
+      %p コメントを追加
 
 = javascript_pack_tag 'comment'
