account page 作成

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -6,7 +6,8 @@
     .card#article-index{data: {article_id: article.id}}
       .card_header
         .card_avatar
-          = image_tag article.user.avatar_image, class: 'avatar'
+          = link_to account_path(article.user) do
+            = image_tag article.user.avatar_image, class: 'avatar'
         .card_account_name
           = article.user.account
       .card_image
