--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,14 +1,1 @@
-- content_for :header do
-  .header_left
-    = image_tag 'icon_back'
-  .header_right
-    .account_name
-      = current_user.account
-.container
-  = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
-    = f.label :image do
-      .profile_photo
-        = image_tag current_user.avatar_image, class: 'avatar'
-        = f.file_field :image, class: 'uploader', style: 'display:none'
-
-= javascript_pack_tag 'profile'
+= render 'commons/profile', user: current_user
