--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -1,9 +1,16 @@
 - content_for :header do
   .header_left
     = image_tag 'icon_back'
-  .header_right
+  .header_center
     .account_name
       = user.account
+  .header_right
+    - if current_page?(account_path(user.id))
+      .follow_btn
+        - if current_user&.has_followed?(user)
+          %p Unfollow
+        - else
+          = link_to 'Follow',account_follows_path(user), data: {method: 'post'}
 .container
   = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
     = f.label :image do
