--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -8,9 +8,9 @@
     - if current_page?(account_path(user.id))
       .follow_btn
         .unfollow.hidden
-          = link_to 'Unfollow',account_unfollows_path(user), data: {method: 'post'}
+          %p Unfollow
         .follow.hidden
-          = link_to 'Follow',account_follows_path(user), data: {method: 'post'}
+          %p Follow
 .container
   = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
     = f.label :image do
