--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -7,3 +7,21 @@
   border-radius: 100%;
   height: 50px;
 }
+
+.count {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+
+  .count_item {
+    text-align: center;
+
+    span {
+      font-weight: bold;
+    }
+
+    p {
+      opacity: 0.6;
+    }
+  }
+}
