--- a/app/views/commons/_profile.html.haml
+++ b/app/views/commons/_profile.html.haml
@@ -11,6 +11,8 @@
           %p Unfollow
         .follow.hidden
           %p Follow
+    - if current_page?(root_path)
+      = link_to 'ログアウト', destroy_user_session_path, data: {method: 'delete'}
 .container
   = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
     = f.label :image do
