--- a/app/views/followers/index.html.haml
+++ b/app/views/followers/index.html.haml
@@ -5,7 +5,7 @@
     Followers
 .container
   - @users.each do |user|
-    .follow
+    .follows
       .follow_user
         = image_tag user.avatar_image
       .follow_user_name 
