--- a/app/views/followings/index.html.haml
+++ b/app/views/followings/index.html.haml
@@ -6,7 +6,7 @@
 .container
   - @users.each do |user|
     .follows
-      .follow_user
+      .follows_user
         = image_tag user.avatar_image
-      .follow_user_name 
+      .follows_user_name 
         = user.account
